add mousemove painting cells

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ function ONLOAD() {
     <option value="int">L int</option>
     <option value="half">half L</option>
 </select>
-&nbsp;&nbsp; Labels:
+&nbsp;&nbsp; Cell codes:
 <select
   onchange="if (!changeLblBase(this.value)) this.selectedIndex=this.oldIndex" onFocus="this.oldIndex=this.selectedIndex"
   >
