--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=1000">
    <title>Sp-filling curves, compare 1</title>
 
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="./src/d3.v5.min.js"></script><!-- or https://d3js.org/d3.v5.min.js -->
     <script src="./src/GSfc4q.js"></script>
     <script src="./src/curves-grid.js"></script>
 
@@ -21,6 +21,24 @@
     border-top: 1px solid #ddd;
   }
 
+  #chartsContainer svg.theChart path.curve {
+  	stroke:#666;     /* light gray */
+  	fill:none;
+  	stroke-width:4;  /* 0.25 to 5 */
+    stroke-linecap: square;
+    opacity:0.6;     /*  0 to 0.5 */
+  }
+
+  #chartsContainer svg.theChart path.curve_dash {
+    animation: _dash_ 3s linear 1s infinite running;
+    stroke-dasharray: 5;
+    stroke-dashoffset: 2;
+  }
+  @keyframes _dash_ { /* complement of path.curve_dash */
+      from { stroke-dashoffset: 22; }
+      to   { stroke-dashoffset: 5; }
+  }
+
   #chartsContainer svg.theChart  {
     margin: 10px;
   }
@@ -28,19 +46,10 @@
     cursor:pointer;
     pointer-events: all;
   }
-  #chartsContainer svg.theChart path {
-      fill: none;
-      stroke: #3A5894;
-      stroke-width: 0.25;
-      stroke-linecap: square;
-  }
   #chartsContainer svg.theChart rect {
-    opacity:0.5;
+    opacity:0.8; /* 0.5 to 1*/
   }
-  #chartsContainer svg.theChart path.skeleton {
-      stroke: #DDD;
-      stroke-width: 0.1;
-  }
+
   #chartsContainer div.theChartTooltip {
       display: none;
       position: absolute;
@@ -53,6 +62,7 @@
       background: rgba(0,0,140,0.9);
       text-align: center;
       pointer-events: none;
+      z-index: 999;
   }
   #chartsContainer div.theChartTooltip code,
   #chartsContainer span.numCells {
@@ -176,6 +186,7 @@ function ONLOAD() {
   <option value="std">Standard</option>
   <option value="dec">Decimal</option>
   <option value="32">base 32nvu</option>
+  <option value="4">base 4h</option>
 </select>
 
 <br/>&nbsp;<br/>
@@ -214,6 +225,8 @@ function ONLOAD() {
 On mouse-over: hierarchical <a href="http://osm.codes/_foundations/art1.pdf" target="_blank">base4h, base16h and base 32-nvu described here</a>.
 
 </form>
+<hr/>
+<p align="center"><a href="https://github.com/ppKrauss/Sfc4q">source</a> | <a href="http://bl.ocks.org/ppKrauss/raw/f8e947f4628a7cc066ef0b9024f79e13/">compare paths</a></p>
 
 </body>
 </html>
