--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=1000">
    <title>Sp-filling curves, compare 1</title>
 
-    <script src="./src/d3.v5.min.js"></script><!-- or https://d3js.org/d3.v5.min.js -->
+    <script src="https://d3js.org/d3.v5.min.js"></script><!-- offline ./src/d3.v5.min.js -->
     <script src="./src/GSfc4q.js"></script>
     <script src="./src/curves-grid.js"></script>
 
