--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ var globOrder_exact = 2; // change selected option. BUG: ignoring 0.5, 1.5, etc.
 var crvID0_showDecimal = false;
 var distinctColors = {}
 const conf_canvasWidth_min = 320;
-const conf_alertLevel = 1;
+GSfc4q.conf_alertLevel = 1;
 
 var xzoomNode;
 //var xbaseNode;
