change base-h alphabet as art1 v0.7

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Zoom/pan:
 		<option value="-2">RESET and Disable -->
 	</select>
   &nbsp;&nbsp;&nbsp;&nbsp;
-  <a href="https://github.com/ppKrauss/Sfc4q">Sources</a>
+  <a href="https://github.com/osm-codes/Sfc4q">Sources</a>
 </form>
 
 </body>
